# DMELOGIC-v5

./: .gitattributes  .gitignore  README.md  config.toml.example  pyproject.toml  settings.json  start_nova_launcher.py
.github/workflows/: reliability-upgrade.yml
assets/: MEDICAID_FEE_SCHED_10252025.xlsx
docs/: ARCHITECTURE.md
installer/: DMELogic.iss  DMELogic.spec  README.md
src/assets/: hcpcs_descriptions.json
src/dmelogic/: __init__.py  app.py  claims_1500.py  company.py  config.py  dme_dialogs.py  dme_theme.py  dme_widgets.py  dmelogic_api.py  fax_contacts.py  features.py  identity.py  nova_agent.py  nova_phone.py  nova_remittance_parser.py  nova_ringcentral.py  nova_ui_server.py  ocr_indexer.py  ocr_status.py  order_rules.py  paths.py  place_of_service.py  prescriber_lookup_dialog.py  refill_service.py  reserved_rx_manager.py  scan.py  settings.py  theme_manager.py  version.py
tests/: conftest.py  test_app_ensure_venv.py  test_app_ui_gates.py  test_app_window_gate_integration.py  test_idle_lock_modal_deferral.py  test_inventory_item_dialog_seam.py  test_login_recovery.py  test_nova_background_embedded_fallback.py  test_place_of_service_billing.py  test_prescriber_dialog_seam.py  test_rx_upload_server_trim.py  test_startup_migration_failfast.py  test_triage_trim_service.py  test_ui_lazy_import.py  test_ui_no_direct_legacy_dialog_imports.py
tools/: diagnose_new_rx.py  reliability_check.py  run_preview.py  run_triage_preview.py
tools/fax_downloader/: .env.example  GOOGLE_APPS_SCRIPT_SETUP.md  README.md  fax_downloader.py  google_apps_script_fax_only.gs  (+4 more)
(+108 files in other folders)
